--- a/styles/about.css
+++ b/styles/about.css
@@ -1168,7 +1168,7 @@ color: #000000;
 }
 /*  */
 ::-webkit-scrollbar-button {
-  background-image:url('');
+  /* background-image:url(''); */
   background-repeat:no-repeat;
   width:5px;
   height:0px
@@ -1189,7 +1189,7 @@ color: #000000;
   }
   
   ::-webkit-resizer{
-  background-image:url('');
+  /* background-image:url(''); */
   background-repeat:no-repeat;
   width:4px;
   height:0px
@@ -1377,3 +1377,87 @@ color: #000000;
     filter: drop-shadow(0px 4px 1px rgba(0, 0, 0, 0.25));
     z-index: -1;
    }
+
+   @media only screen and (min-width: 320px) and (max-width: 768px) {
+    /* For mobile phones: */
+    [class*="col-"] {
+      width: 100%;
+    }
+  
+  .info_box
+  {
+    transform: scale(0.5);
+    left: -33rem;
+    top: -125rem;
+  }
+  .rectangle1,
+  .rectangle3,
+  .rectangle5,
+  .rectangle7,
+  .rectangle9,
+  .rectangle11
+  {
+    left: 13rem;
+  }
+  .img0,
+  .img1,
+  .img2,
+  .img3,
+  .img4,
+  .img5,
+  .img6,
+  .img7,
+  .img8,
+  .img9,
+  .img10,
+  .img11,
+  .img12,
+  .img13{
+    opacity: 0;
+  }
+  p{
+    text-align: left;
+    font-size: 35px;
+    right: -30px;
+  }
+  .cena2{
+    left: 60rem;
+  top: 57rem;
+  }
+  .cena4{
+    left: 70rem;
+  top: 126rem;
+  }
+  .cena6{
+    left: 70rem;
+  top: 197rem;
+  }
+  .cena8{
+    left: 40rem;
+    top: 267rem;
+  }
+  .cena10{
+    left: 70rem;
+    bottom: 142rem;
+  }
+  .cena12{
+    left: 70rem;
+    bottom: 72rem;
+  }
+  .info_2,
+  .info_4,
+  .info_6,
+  .info_8,
+  .info_10,
+  .info_12{
+    left: 39rem;
+  }
+  a.idTop{
+    transform: scale(0.7);
+  }
+  .languages{
+    left: 1rem;
+    top: -7rem;
+    transform: scale(0.6);
+  }
+  }
