--- a/styles/contacts.css
+++ b/styles/contacts.css
@@ -137,7 +137,32 @@ color: #381404;
     width: 587px;
     height: 825px;
     left: 820px;
-    top: -100px;
+    top: -160px;
     background-repeat: no-repeat;
     border-radius: 66px;
+}
+
+@media only screen and (min-width: 320px) and (max-width: 768px) {
+  /* For mobile phones: */
+  [class*="col-"] {
+    width: 100%;
+  }
+  .contacts{
+    transform: scale(0.3);
+  align-items: left;
+    text-align: left;
+    left: -130px;
+    top: 100px;
+  }
+  .loc1{
+    transform: scale(0.4);
+    left: -660px;
+    top: -300px;
+  }
+  .loc2{
+    transform: scale(0.6);
+    left: 45rem;
+    top: -200px;
+  }
+
 }
