--- a/styles/home.css
+++ b/styles/home.css
@@ -1,9 +1,3 @@
-@media screen and (max-width:321px){
-  body{width:100px}
-  }
-  #__next{
-    height: 0;
-  }
 html,
 body {
   padding: 0;
@@ -177,4 +171,38 @@ font-size: 20px;
 a :hover{
   background: #C27B6C; 
   transition-duration: .5s;
+}
+
+
+@media only screen and (min-width: 320px) and (max-width: 768px) {
+  /* For mobile phones: */
+
+.information,
+.button_bar{
+  transform: scale(0.7);
+}
+
+  .name{
+    text-align: left;
+    font-size: 30px;
+
+  }
+  .galochka{
+    top: 120px;
+  }
+  .info1 p{
+    text-align: left;
+    font-size: 30px;
+  }
+  .info2 p{
+    text-align: left;
+    font-size: 30px;
+    width: 500px;
+  }
+  .button1,
+  .button2{
+    top: 1rem;
+  }
+ 
+
 }
